# HumaniPy

./: .gitignore  404.html  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: deploy_docs.yml  publish.yml  python-tests.yml
delays/: index.html
examples/: demo.html  main.py
humani_py/: __init__.py  delays.py  movements.py  scrolling.py  stealth.py  typing.py  utils.py
humani_py/docs/: delays.md  movements.md  scrolling.md  stealth.md  typing.md  utils.md
movements/: index.html
scrolling/: index.html
search/: search_index.json
stealth/: index.html
tests/: test_delays.py  test_movements.py  test_robustness.py  test_scrolling.py  test_stealth.py  test_typing.py
typing/: index.html
utils/: index.html
